// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OakDownloadCheckBox matches snapshot with fileSizeSlot 1`] = `
.c15 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  margin: 0;
  outline: none;
  border: 0.125rem solid;
  border-color: #222222;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #808080;
}

.c15:checked {
  background: #222222;
  border-color: #222222;
}

.c15:disabled {
  pointer-events: none;
}

.c17:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%);
}

.c0 {
  overflow: hidden;
  border: 0.125rem solid;
  border-radius: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  overflow: hidden;
}

.c3 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c4 {
  padding: 0.75rem;
  background: #ffe555;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  position: relative;
  width: 3rem;
  min-width: 3rem;
  height: 3rem;
  min-height: 3rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c8 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c11 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c12 {
  padding-right: 1rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c13 {
  position: relative;
  width: 1.5rem;
  height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c19 {
  position: absolute;
  top: 0rem;
  left: 0rem;
  width: 1.5rem;
  height: 1.5rem;
  padding: 0rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c21 {
  position: relative;
  width: 100%;
  min-width: 100%;
  height: 100%;
  min-height: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c7 {
  object-fit: contain;
}

.c22 {
  -webkit-filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  object-fit: contain;
}

.c20 {
  pointer-events: none;
  opacity: 0;
}

input:checked + .c18 {
  opacity: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  gap: 0.25rem;
}

.c2 {
  cursor: pointer;
}

.c2:has(input:focus-within):has(:focus-visible) {
  box-shadow: 0px 0px 0px 2px #ffe555, 0px 0px 0px 5px #575757;
}

@media (hover:hover) {
  .c15:hover:not(:disabled) {
    border-color: #222222;
  }
}

@media (hover:hover) {
  .c16:hover:not(.c14:checked):not(.c14:disabled)::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 60%;
    height: 60%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
    border-radius: 0.125rem;
    background: #222222;
  }
}

@media (hover:hover) {
  .c2:hover:not(:disabled,:active) {
    background: #f2f2f2;
  }
}

<div
  className="c0 c1 c2"
>
  <label
    style={
      {
        "cursor": "pointer",
        "flex": 1,
      }
    }
  >
    <div
      className="c3 c1"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6"
        >
          <img
            alt=""
            className="c7"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            onError={[Function]}
            onLoad={[Function]}
            src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953657/icons/hz4l3iq6i68kazvkvorq.svg"
            style={
              {
                "bottom": 0,
                "color": "transparent",
                "height": "100%",
                "left": 0,
                "objectFit": undefined,
                "objectPosition": undefined,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": "100%",
              }
            }
          />
        </div>
      </div>
      <div
        className="c8 c9"
      >
        <div
          className="c10"
        >
          TITLE
        </div>
        <div
          className="c11"
        >
          FILE_SIZE
        </div>
        <div
          className="c11"
        >
          FORMAT
        </div>
      </div>
      <div
        className="c12 c5"
      >
        <div
          className="c13"
        >
          <input
            className="c14 c15 c16 c17"
            disabled={false}
            id="checkbox-1"
            name="checkbox-1"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="checkbox"
            value="Option 1"
          />
          <div
            className="c18 c19 c20"
          >
            <div
              className="c21"
            >
              <img
                alt=""
                className="c22"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                onError={[Function]}
                onLoad={[Function]}
                src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699954310/icons/efd3esaor6zqk7seh6kt.svg"
                style={
                  {
                    "bottom": 0,
                    "color": "transparent",
                    "height": "100%",
                    "left": 0,
                    "objectFit": undefined,
                    "objectPosition": undefined,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`OakDownloadCheckBox matches snapshot without fileSizeSlot 1`] = `
.c15 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  margin: 0;
  outline: none;
  border: 0.125rem solid;
  border-color: #222222;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #808080;
}

.c15:checked {
  background: #222222;
  border-color: #222222;
}

.c15:disabled {
  pointer-events: none;
}

.c17:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%);
}

.c0 {
  overflow: hidden;
  border: 0.125rem solid;
  border-radius: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  overflow: hidden;
}

.c3 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c4 {
  padding: 0.75rem;
  background: #ffe555;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  position: relative;
  width: 3rem;
  min-width: 3rem;
  height: 3rem;
  min-height: 3rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c8 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c11 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c12 {
  padding-right: 1rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c13 {
  position: relative;
  width: 1.5rem;
  height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c19 {
  position: absolute;
  top: 0rem;
  left: 0rem;
  width: 1.5rem;
  height: 1.5rem;
  padding: 0rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c21 {
  position: relative;
  width: 100%;
  min-width: 100%;
  height: 100%;
  min-height: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c7 {
  object-fit: contain;
}

.c22 {
  -webkit-filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  object-fit: contain;
}

.c20 {
  pointer-events: none;
  opacity: 0;
}

input:checked + .c18 {
  opacity: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  gap: 0.25rem;
}

.c2 {
  cursor: pointer;
}

.c2:has(input:focus-within):has(:focus-visible) {
  box-shadow: 0px 0px 0px 2px #ffe555, 0px 0px 0px 5px #575757;
}

@media (hover:hover) {
  .c15:hover:not(:disabled) {
    border-color: #222222;
  }
}

@media (hover:hover) {
  .c16:hover:not(.c14:checked):not(.c14:disabled)::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 60%;
    height: 60%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
    border-radius: 0.125rem;
    background: #222222;
  }
}

@media (hover:hover) {
  .c2:hover:not(:disabled,:active) {
    background: #f2f2f2;
  }
}

<div
  className="c0 c1 c2"
>
  <label
    style={
      {
        "cursor": "pointer",
        "flex": 1,
      }
    }
  >
    <div
      className="c3 c1"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6"
        >
          <img
            alt=""
            className="c7"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            onError={[Function]}
            onLoad={[Function]}
            src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953657/icons/hz4l3iq6i68kazvkvorq.svg"
            style={
              {
                "bottom": 0,
                "color": "transparent",
                "height": "100%",
                "left": 0,
                "objectFit": undefined,
                "objectPosition": undefined,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": "100%",
              }
            }
          />
        </div>
      </div>
      <div
        className="c8 c9"
      >
        <div
          className="c10"
        >
          TITLE
        </div>
        <div
          className="c11"
        >
          FORMAT
        </div>
      </div>
      <div
        className="c12 c5"
      >
        <div
          className="c13"
        >
          <input
            className="c14 c15 c16 c17"
            disabled={false}
            id="checkbox-1"
            name="checkbox-1"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="checkbox"
            value="Option 1"
          />
          <div
            className="c18 c19 c20"
          >
            <div
              className="c21"
            >
              <img
                alt=""
                className="c22"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                onError={[Function]}
                onLoad={[Function]}
                src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699954310/icons/efd3esaor6zqk7seh6kt.svg"
                style={
                  {
                    "bottom": 0,
                    "color": "transparent",
                    "height": "100%",
                    "left": 0,
                    "objectFit": undefined,
                    "objectPosition": undefined,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;
